<resources>
    <string name="app_name" translatable="false">Rethink</string>
    <string name="app_name_small_case" translatable="false">rethink</string>
    <string name="app_name_alpha" translatable="false">RETHINK α</string>
    <string name="title_about" translatable="true">About</string>
    <string name="title_settings" translatable="true">Settings</string>
    <string name="title_statistics" translatable="true">Stats</string>
    <string name="title_proc" translatable="false">Proc</string>
    <string name="pause_title_desc" translatable="true">taking a nap…</string>
    <string name="settings_title_desc" translatable="true">A highly customizable DNS and Firewall</string>
    <string name="about_title_desc" translatable="true">Detect and block network security threats</string>
    <string name="txt_home" translatable="true">Home</string>
    <string name="accessibility_service_description" translatable="true">
        Rethink uses accessibility service to detect and firewall background applications.
        Rethink does not collect or sell any information.
    </string>
    <string name="next" translatable="true">Next</string>
    <string name="skip" translatable="true">Skip</string>
    <string name="finish" translatable="true">Finish</string>
    <string name="lbl_cancel" translatable="true">Cancel</string>
    <string name="lbl_apply" translatable="true">Apply</string>
    <string name="lbl_dismiss" translatable="true">Dismiss</string>
    <string name="lbl_all" translatable="true">All</string>
    <string name="lbl_allowed" translatable="true">Allowed</string>
    <string name="lbl_maybe_blocked" translatable="true">Maybe Blocked</string>
    <string name="lbl_blocked" translatable="true">Blocked</string>
    <string name="lbl_disabled" translatable="true">Disabled</string>
    <string name="lbl_domain" translatable="true">Domain</string>
    <string name="lbl_wildcard" translatable="true">Wildcard</string>
    <string name="lbl_action_required" translatable="true">Action Required</string>
    <string name="lbl_rules" translatable="true">rules</string>
    <string name="lbl_configure" translatable="true">Configure</string>
    <string name="lbl_logs" translatable="true">Logs</string>
    <string name="lbl_network" translatable="true">Network</string>
    <string name="lbl_create" translatable="true">Create</string>
    <string name="lbl_qr_code" translatable="true">QR Code</string>
    <string name="lbl_import" translatable="true">Import</string>
    <string name="lbl_wireguard" translatable="true">WireGuard</string>
    <string name="lbl_public_key" translatable="true">Public Key</string>
    <string name="lbl_addresses" translatable="true">Addresses</string>
    <string name="lbl_dns_servers" translatable="true">DNS Servers</string>
    <string name="lbl_applications" translatable="true">Applications</string>
    <string name="lbl_ip_rules" translatable="true">IP Rules</string>
    <string name="lbl_domain_rules" translatable="true">Domain Rules</string>
    <string name="lbl_delete" translatable="true">Delete</string>
    <string name="lbl_proceed" translatable="true">Proceed</string>
    <string name="lbl_private_key" translatable="true">Private key</string>
    <string name="lbl_generated" translatable="true">(generated)</string>
    <string name="lbl_random" translatable="true">(random)</string>
    <string name="lbl_listen_port" translatable="true">Listen port</string>
    <string name="lbl_mtu" translatable="true">MTU</string>
    <string name="lbl_auto" translatable="true">(auto)</string>
    <string name="lbl_include" translatable="true">Include</string>
    <string name="lbl_select_all" translatable="true">select all</string>
    <string name="lbl_active" translatable="true">Active</string>
    <string name="lbl_inactive" translatable="true">Inactive</string>
    <string name="lbl_checking" translatable="false">Checking…</string>
    <string name="lbl_connecting" translatable="false">Connecting…</string>
    <string name="lbl_socks5" translatable="true">SOCKS5</string>
    <string name="lbl_http" translatable="true">HTTP</string>
    <string name="lbl_http_socks5" translatable="true">HTTPS &amp; SOCKS5</string>
    <string name="lbl_fast" translatable="true">fast</string>
    <string name="lbl_slow" translatable="true">slow</string>
    <string name="lbl_very" translatable="true">very</string>
    <string name="lbl_add" translatable="true">Add</string>
    <string name="lbl_app_wise" translatable="true">Per App</string>
    <string name="lbl_sec" translatable="true">sec</string>
    <string name="lbl_min" translatable="true">min</string>
    <string name="lbl_hour" translatable="true">hr</string>
    <string name="lbl_day" translatable="true">day</string>
    <string name="lbl_preshared_key" translatable="true">Preshared key</string>
    <string name="lbl_insecure" translatable="true"> (insecure)</string>
    <string name="lbl_optional" translatable="true">(optional)</string>
    <string name="lbl_persistent_keepalive" translatable="true">Persistent keepalive</string>
    <string name="lbl_allowed_ips" translatable="true">Allowed IPs</string>
    <string name="lbl_save" translatable="true">Save</string>
    <string name="lbl_saving" translatable="true">Saving…</string>
    <string name="lbl_dot" translatable="false">DoT</string>
    <string name="lbl_odoh" translatable="false">ODoH</string>
    <string name="lbl_cache" translatable="true">Cache</string>
    <string name="lbl_status" translatable="true">Status</string>
    <string name="lbl_plan" translatable="true">Plan</string>
    <string name="lbl_expires_on" translatable="true">Valid until</string>
    <string name="lbl_cancelled" translatable="true">Cancelled</string>
    <string name="lbl_expired" translatable="true">Expired</string>
    <string name="lbl_grace_period" translatable="true">Grace Period</string>
    <string name="lbl_paused" translatable="true">Paused</string>
    <string name="lbl_remove" translatable="true">Remove</string>
    <string name="lbl_last" translatable="true">Last</string>
    <string name="lbl_dot_abbr" translatable="false">DNS-over-TLS</string>
    <string name="lbl_dc" translatable="false">DC</string>
    <string name="lbl_dc_abbr" translatable="false">DNSCrypt</string>
    <string name="lbl_dp" translatable="false">DNS 53</string>
    <string name="lbl_dp_abbr" translatable="false">DNS Proxy</string>
    <string name="lbl_odoh_abbr" translatable="false">Oblivious DNS-over-HTTPS</string>
    <string name="lbl_rdns" translatable="false">RDNS</string>
    <string name="lbl_starting" translatable="true">Starting</string>
    <string name="lbl_overall" translatable="true">Overall</string>
    <string name="lbl_stopped" translatable="true">Stopped</string>
    <string name="lbl_idle" translatable="true">Idle</string>
    <string name="lbl_private" translatable="true">private</string>
    <string name="lbl_secure" translatable="true">secure</string>
    <string name="lbl_anonymous" translatable="true">anonymous</string>
    <string name="lbl_peer" translatable="true">Peer</string>
    <string name="lbl_split" translatable="true">Split</string>
    <string name="lbl_on_device" translatable="true">on-device</string>
    <string name="lbl_ip" translatable="false">IP</string>
    <string name="lbl_unselected" translatable="true">Unselected</string>
    <string name="lbl_notification" translatable="true">Notification</string>
    <string name="lbl_mastodon" translatable="false">Mastodon</string>
    <string name="lbl_matrix" translatable="false">Matrix</string>
    <string name="lbl_reddit" translatable="false">Reddit</string>
    <string name="lbl_test" translatable="true">Test</string>
    <string name="lbl_protos" translatable="true">protos</string>
    <string name="lbl_experimental" translatable="true">(experimental)</string>
    <string name="lbl_service_providers" translatable="true">Service Providers</string>
    <string name="lbl_search" translatable="false">Search</string>
    <string name="lbl_hop" translatable="true">Relays</string>
    <string name="lbl_ipinfo_inc" translatable="false">IPinfo Inc.</string>
    <string name="lbl_manual" translatable="true">Manual</string>
    <string name="lbl_fallback" translatable="true">Fallback</string>
    <string name="lbl_default" translatable="true">Default</string>
    <string name="lbl_action" translatable="true">Action</string>
    <string name="lbl_connect" translatable="true">Connect</string>
    <string name="firewall_rules" translatable="true">Network Rules</string>
    <string name="block" translatable="true">Block</string>
    <string name="hybrid_mode_info_title" translatable="true">DNS + Firewall</string>
    <string name="bsct_conn_rule_explanation" translatable="true">
        &lt;u>#1&lt;/u>: Blocks an app from connecting to the Internet.
        \n &lt;u>#2&lt;/u>: Blocks any app from connecting to a particular IP.
        \n &lt;u>#3&lt;/u>: Blocks all connections when device locked (Universal Firewall).
        \n &lt;u>#4&lt;/u>: Blocks any app not in use (Universal Firewall).
        \n &lt;u>#5&lt;/u>: Blocks connections when source app unknown (Universal Firewall).
        \n &lt;u>#6&lt;/u>: Blocks all UDP traffic except DNS (Universal Firewall).
        \n &lt;u>#7&lt;/u>: Block connections when DNS is bypassed (Universal Firewall).
        </string>
    <string name="settings_dns_proxy_dialog_header" translatable="true">Set SOCKS5 Proxy</string>
    <string name="settings_dns_proxy_dialog_app" translatable="true">App</string>
    <string name="settings_dns_proxy_dialog_hostname" translatable="true">Hostname</string>
    <string name="settings_dns_proxy_dialog_port_number" translatable="true">Port Number</string>
    <string name="settings_dns_proxy_dialog_username" translatable="true">Username</string>
    <string name="settings_dns_proxy_dialog_password" translatable="true">Password</string>
    <string name="settings_dns_proxy_dialog_positive_btn" translatable="true">Set</string>
    <string name="settings_socks5_dialog_hint_ip" translatable="true">IP Address</string>
    <string name="settings_socks5_dialog_hint_port" translatable="true">Port</string>
    <string name="settings_socks5_dialog_hint_username" translatable="true">Username (optional)</string>
    <string name="settings_socks5_dialog_hint_password" translatable="true">Password (optional)</string>
    <string name="univ_firewall_rule_4" translatable="true">Block UDP except DNS and NTP</string>
    <string name="fapps_info_dialog_positive_btn" translatable="true">Okay</string>
    <string name="ci_dialog_title" translatable="true">Add IP / Port Rule</string>
    <string name="ci_dialog_desc" translatable="true">Allow (bypass) or block IP address, IP subnet (range), Port. Example: 10.10.10.10, 10.1.1.*, 10.2.2/24, ffff::/104, [::]:80, [10.1.0.0/16]:80, *.*:80</string>
    <string name="ci_dialog_edittext_hint" translatable="true">IP address, subnet or port</string>
    <string name="ci_dialog_error_invalid_ip" translatable="true">Invalid IP address, subnet or port.</string>
    <string name="ci_trust_rule" translatable="true">Trust</string>
    <string name="wg_setting_ssid_title" translatable="true">Wi‑Fi only</string>
    <string name="wg_ssid_dialog_description" translatable="true">%1$s this WireGuard VPN when <i>active</i> Wi-Fi Identifier (%2$s) %3$s.</string>
    <string name="wg_ssid_input_hint" translatable="true">Enter Wi-Fi identifier (%1$s)</string>
    <string name="wg_ssid_type_wildcard" translatable="true">Matches partially</string>
    <string name="rpn_restore_dialog_title" translatable="false">Restoring connection</string>
    <string name="rpn_restore_dialog_hint" translatable="false">This usually completes in a few seconds. Keep your internet connection active.</string>
    <string name="rpn_restore_dialog_status_unregistering" translatable="false">Unregistering current session…</string>
</resources>