<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_proxy_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="@dimen/large_font_text_view"
        android:text="@string/settings_dns_proxy_dialog_header" />

    <LinearLayout
        android:id="@+id/dialog_proxy_spinner_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:textSize="@dimen/large_font_text_view"
            android:text="@string/settings_dns_proxy_dialog_app" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/dialog_proxy_spinner_appname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font_text_view"
            android:layout_gravity="center"
            android:layout_weight="0.7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_proxy_ip_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/large_font_text_view"
            android:layout_weight="0.3"
            android:text="@string/settings_dns_proxy_dialog_hostname" />

        <EditText
            android:id="@+id/dialog_proxy_edit_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/large_font_text_view"
            android:maxLines="1"
            android:layout_weight="0.7"
            android:hint="@string/settings_socks5_dialog_hint_ip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/large_font_text_view"
            android:layout_weight="0.3"
            android:text="@string/settings_dns_proxy_dialog_port_number" />

        <EditText
            android:id="@+id/dialog_proxy_edit_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:maxLines="1"
            android:hint="@string/settings_socks5_dialog_hint_port"
            android:textSize="@dimen/large_font_text_view"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:textSize="@dimen/large_font_text_view"
            android:text="@string/settings_dns_proxy_dialog_username" />

        <EditText
            android:id="@+id/dialog_proxy_edit_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:maxLines="1"
            android:textSize="@dimen/large_font_text_view"
            android:hint="@string/settings_socks5_dialog_hint_username" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:textSize="@dimen/large_font_text_view"
            android:text="@string/settings_dns_proxy_dialog_password" />

        <EditText
            android:id="@+id/dialog_proxy_edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:textSize="@dimen/large_font_text_view"
            android:hint="@string/settings_socks5_dialog_hint_password"
            android:maxLines="1"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:textSize="@dimen/large_font_text_view"
            android:text="@string/univ_firewall_rule_4" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:buttonTint="?attr/accentGood"
            android:foregroundTint="?attr/accentGood"
            android:id="@+id/dialog_proxy_udp_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_proxy_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="@dimen/default_font_text_view"
        android:textColor="@color/colorRed_A400" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_proxy_cancel_btn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/settings_dns_proxy_dialog_negative_btn"
            android:textSize="@dimen/large_font_text_view"
            android:textColor="?attr/accentGood" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_proxy_apply_btn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font_text_view"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/settings_dns_proxy_dialog_positive_btn"
            android:textColor="?attr/accentGood" />
    </LinearLayout>
</LinearLayout>