<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/background"
    android:padding="10dp">

    <TextView
        android:id="@+id/daci_ip_title"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/ci_dialog_title"
        android:textSize="@dimen/large_font_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daci_ip_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:text="@string/ci_dialog_desc"
        android:textColor="?attr/primaryLightColorText"
        android:textSize="@dimen/small_font_subheading_text"
        app:layout_constraintTop_toBottomOf="@id/daci_ip_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/daci_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/ci_dialog_edittext_hint"
        app:hintTextColor="?attr/accentGood"
        app:layout_constraintTop_toBottomOf="@id/daci_ip_desc">

        <EditText
            android:id="@+id/daci_ip_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:hint="@string/ci_dialog_edittext_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:maxLines="2"
            android:minHeight="48dp"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/large_font_text_view"
            app:layout_constraintRight_toLeftOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/daci_failure_text_view"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/ci_dialog_error_invalid_ip"
        android:textColor="@color/colorRed_A400"
        android:textSize="@dimen/default_font_text_view"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/daci_text_input_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/daci_block_btn"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/block"
        android:textColor="?attr/accentGood"
        android:textSize="@dimen/large_font_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daci_failure_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/daci_trust_btn"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/ci_trust_rule"
        android:textColor="?attr/accentGood"
        android:textSize="@dimen/large_font_text_view"
        app:layout_constraintEnd_toStartOf="@id/daci_block_btn"
        app:layout_constraintTop_toBottomOf="@id/daci_failure_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/daci_cancel_btn"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/fapps_info_dialog_positive_btn"
        android:textColor="?attr/accentGood"
        android:textSize="@dimen/large_font_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daci_failure_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
