<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll|enterAlways">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/info_rules_dialog_cancel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/spinner_firewall"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:text="@string/firewall_rules"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/info_rules_dialog_rules_desc"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/bsct_conn_rule_explanation"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />



        <TextView
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/spinner_both"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:text="@string/hybrid_mode_info_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:visibility="gone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>